--- a/heroku.yml
+++ b/heroku.yml
@@ -1,7 +1,6 @@
 setup:
-  addons:
-  - plan: heroku-postgresql
-    as: DATABASE
+ addons:
+   - plan: heroku-postgresql
 build:
-  docker:
-    web: Dockerfile
+ docker:
+   web: ./Dockerfile
