--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,10 @@ verify_ssl = true
 [packages]
 flask = "*"
 flask-restful = "*"
-psycopg2 = "*"
 peewee = "*"
 python-dotenv = "*"
 flask_cors = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
