fixes for Docker and python env

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 flask = "*"
 flask-restful = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
 peewee = "*"
 python-dotenv = "*"
 flask_cors = "*"
