--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
--i https://pypi.org/simple
-aniso8601==4.1.0
-click==7.0
-flask-restful==0.3.7
-flask==1.0.2
+aniso8601==8.0.0
+astroid==2.2.5
+Click==7.0
+Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-RESTful==0.3.8
+isort==4.3.20
 itsdangerous==1.1.0
-jinja2==2.10
-markupsafe==1.1.1
-peewee==3.8.2
-psycopg2==2.7.7
-pytz==2018.9
-six==1.12.0
-werkzeug==0.14.1
+Jinja2==2.11.1
+lazy-object-proxy==1.4.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+peewee==3.13.1
+psycopg2-binary==2.8.4
+pylint==2.3.1
+python-dotenv==0.10.5
+pytz==2019.3
+six==1.14.0
+typed-ast==1.3.5
+Werkzeug==1.0.0
+wrapt==1.11.1
