--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: python
 python:
   - "3.7"
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
-# command to run tests
+
+services:
+  - docker
+
+before_install:
+  - docker build -t cima-api .
+  - docker run cima-api
+  - docker ps -a
+
+script:
+  - python api.py
