--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
 language: python
 python:
   - "3.7"
-
-services:
-  - docker
-
-before_install:
-  - docker build -t cima-api .
-  - docker run -d cima-api
-  - docker ps -a
-
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+# command to run tests
 script:
-  - python api.py
+  - pytest test.py 
